// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus003Packet {
extensions 22 to 122;

  optional ccsds_mal.protobuf.UINTEGER sid = 1;
  optional ccsds_mal.protobuf.UINTEGER validityParameterId = 2;
  optional ccsds_mal.protobuf.STRING validityParameterMask = 3;
  optional ccsds_mal.protobuf.STRING validityParameterExpectedValue = 4;
  optional ccsds_mal.protobuf.UINTEGER collectionInterval = 5;
  optional ccsds_mal.protobuf.UINTEGER status = 6;
  optional pusGroundModel.protobuf.PusElement pusElement = 7;
  optional ccsds_mal.protobuf.STRING sidLabel = 8;
  optional ccsds_mal.protobuf.BOOLEAN isCollectionIntervalSet = 9;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeSid = 10;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeSid = 11;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeStatus = 12;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeStatus = 13;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeValidParamId = 14;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeValidParamId = 15;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeValidParamMask = 16;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeValidParamMask = 17;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeValidParamExpValue = 18;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeValidParamExpValue = 19;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeCollectInterval = 20;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeCollectInterval = 21;
}
